syntax = "proto3";

package proto;

service BookingService {
    rpc getAllFlights(getAllFlightsRequest) returns (stream getAllFlightsReply);
    rpc SendId(IdMessage) returns (IdResponse);
    rpc RegisterFlight(NewFlight2) returns (RegisterResponse);
    rpc UpdateFlightPrice(UpdatedFlight2) returns (UpdateResponse);
    rpc getAllAvailableSeatsForFlight(AvailableSeatRequest) returns (stream AvailableSeatReply);
}

message AvailableSeatReply {
    string idPosto = 1;
}

message AvailableSeatRequest {
    string idVolo = 1;
}

message getAllFlightsRequest {
    int32 giorno = 1;
    int32 mese = 2;
    int32 anno = 3;
    string aereoporto_arrivo = 4;
    string aereoporto_partenza = 5;
    int32 persone = 6;
    
}

message getAllFlightsReply {
	string id = 1;
	string compagnia = 2;
    string arrivo = 3;
    string partenza = 4;
    string data = 5;
    string orario = 6;
    string prezzoBase = 7;
}

message IdMessage {
    string id = 1;
}

message IdResponse {
    bool isOk = 1;
}

message NewFlight2 {
    string id = 1;
    string date = 2;
    string departureAirport = 3;
    string arrivalAirport = 4;
    string departureTime = 5;
    string arrivalTime = 6;
    string airline = 7;
    string price = 8;
    int32 seats = 9;
}

message RegisterResponse {
    bool isOk = 1;
}

message UpdatedFlight2 {
    string flightId = 1;
    string newPrice = 2;
}

message UpdateResponse {
    bool isOk = 1;
}
